--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./image/favicon.png" type="image/x-icon">
+  <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="./image/favicon.png" type="image/x-icon" />
+
     <title>Dt-Money</title>
-</head>
-<body>
+  </head>
+  <body>
     <noscript>You need to enable Javascript to eun this app!</noscript>
     <div id="root"></div>
-</body>
+  </body>
 </html>
